--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser": "^9.0.1",
     "@angular/platform-browser-dynamic": "^9.0.1",
     "@angular/router": "^9.0.1",
+    "angulartics2": "^8.3.0",
     "core-js": "^2.5.4",
     "echarts": "^4.1.0",
     "mathjs": "^5.1.1",
